@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>643</width>
-    <height>236</height>
+    <width>860</width>
+    <height>240</height>
    </rect>
   </property>
   <property name="windowIcon">
@@ -215,6 +215,26 @@
        </widget>
       </item>
       <item>
+       <widget class="QLabel" name="label_9">
+        <property name="text">
+         <string>&amp;Iteration Count</string>
+        </property>
+        <property name="buddy">
+         <cstring>iteration_count</cstring>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QSpinBox" name="iteration_count">
+        <property name="minimum">
+         <number>15000</number>
+        </property>
+        <property name="maximum">
+         <number>999999999</number>
+        </property>
+       </widget>
+      </item>
+      <item>
        <spacer name="horizontalSpacer_5">
         <property name="orientation">
          <enum>Qt::Horizontal</enum>
@@ -332,8 +352,8 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>643</width>
-     <height>27</height>
+     <width>860</width>
+     <height>24</height>
     </rect>
    </property>
    <widget class="QMenu" name="menu_File">
@@ -393,6 +413,7 @@
   <tabstop>cbc</tabstop>
   <tabstop>gcm</tabstop>
   <tabstop>hash</tabstop>
+  <tabstop>iteration_count</tabstop>
   <tabstop>cancel</tabstop>
   <tabstop>readSize</tabstop>
   <tabstop>sign</tabstop>
