@@ -2,6 +2,7 @@
 0.23 (05/16/2015)
 <ol>
 <li>Added libspoton_delete_urls() to libspoton. Version updated to 0.10.</li>
+<li>Allow adjustment of the iteration count in the file encryption tool.</li>
 <li>Allow configuration of alternating row colors of Chat, E-Mail, and URLs participants. Please see Options.</li>
 <li>Allow configuration of the kernel's cache purge timer.</li>
 <li>Allow importing of URLs without Import Credentials. Only plaintext URLs will be imported.</li>
